<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background_white"
    android:padding="8dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/thumbnail_margin_left" >

        <TextView
            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <!-- 名稱 -->

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_title"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginLeft="3dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/first"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/icon_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_fa_heart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_event" />

                <TextView
                    android:id="@+id/c_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/text_size_event" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/icon_dislike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_fa_thumbs_down"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_event" />

                <TextView
                    android:id="@+id/c_dislike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/text_size_event" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/icon_joiner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_fa_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_event" />

                <TextView
                    android:id="@+id/c_joiner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/text_size_event" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/icon_see"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_fa_eye"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_event" />

                <TextView
                    android:id="@+id/c_see"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/text_size_event" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/mission_photo"
        android:layout_width="@dimen/logo_h"
        android:layout_height="@dimen/logo_h"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:scaleType="centerCrop" />

</RelativeLayout>