<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_clock_o"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/c_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="結束時間"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_desc"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="任務說明"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/descr_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_award"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_award"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="獎品"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_award"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ny_light" />

        <Button
            android:id="@+id/btn_jon"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_flat_blue"
            android:paddingLeft="25dip"
            android:paddingRight="25dip"
            android:text="參加任務" />

        <TextView
            android:id="@+id/article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>