<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_clock_o"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/c_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="活動名稱"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/mission_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_clock_o"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/c_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="結束時間"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>



        <EditText
            android:id="@+id/mission_end"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_desc"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="任務說明"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/mission_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:singleLine="true" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_clock_o"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/c_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="距離目前位置涵蓋範圍"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/mission_scrope"
            android:hint="單位為公里"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:singleLine="true" />        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/icon_award"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_fa_award"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="獎品"
                android:textColor="@color/darkgrey"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/mission_award"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:singleLine="true" />



        <Button
            android:id="@+id/btn_add"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_flat_blue"
            android:paddingLeft="25dip"
            android:paddingRight="25dip"
            android:text="建立任務" />


    </LinearLayout>

</ScrollView>